...
            "state" : "translated",
            "value" : "Permissão de câmera necessária"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "Escolha como deseja partilhar o cartão."
          }
        }
      }
    },
    "Copy" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kopieren"
          }
...
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "Or use this code:" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oder diesen Code verwenden:"
          }
...
            "state" : "translated",
            "value" : "Digitalize o QR Code ou introduza o código manualmente"
          }
        }
      }
    },
    "Scan this QR Code to add a new card" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scannen Sie diesen QR-Code, um eine neue Karte hinzuzufügen"
          }
...
            "state" : "translated",
            "value" : "Partilhar Cartão"
          }
        }
      }
    },
    "Share Inside App" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Im Inneren der App teilen"
          }
...
            "state" : "translated",
            "value" : "Partilhar dentro da aplicação"
          }
        }
      }
    },
    "Share Outside App" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Außerhalb der App teilen"
          }
...
