...
                Image(systemName: "square.and.arrow.up")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(width: 30, height: 30)
                    .padding(5)
            }
            .accessibilityIdentifier("shareButton")
            .buttonStyle(.glass)

            Button(action: {
                withAnimation(.spring(response: 0.3, dampingFraction: 0.6)) {
                    if viewModel.isEditable {
                        viewModel.undo()
...
